wp-init.yml
apiVersion: v1
kind: Pod
metadata:
  name: wp-init
  labels:
    name: wp-init
spec:
  containers:
    - image: gcr.io/machronicle-1287/wp-init
      name: wp-init
      volumeMounts:
        - name: wordpress-volume
          mountPath: /var/www/html
  volumes:
    - name: wordpress-volume
      persistentVolumeClaim:
        claimName: wordpress-volume-claim
