varnish-deployment.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: varnish
  name: varnish
spec:
  # NodePort allows Ingress to pick up service
  type: NodePort
  ports:
    # The port that this service should serve on.
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: varnish
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: varnish-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers: 
        - resources:
            limits:
              cpu: .05
          image: gcr.io/machronicle-1287/varnish
          name: varnish
          ports:
            - containerPort: 80
              name: varnish
